--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dev = [
     "pytest-httpx>=0.21.0",
     "ruff>=0.8.0",
     "mypy>=1.0.0",
+    "pre-commit>=3.0.0",
 ]
 
 [project.urls]
@@ -57,6 +58,8 @@ python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
+# Methods named 'list' conflict with list[] type annotations when using PEP 563
+disable_error_code = ["valid-type"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
