Add MkDocs documentation site
- Add mkdocs.yml with Material theme configuration
- Add documentation pages:
  - Getting started (installation, quickstart, configuration)
  - Guides (async usage, error handling, Airflow integration)
  - API reference (client, resources, models, exceptions)
- Add GitHub Pages deployment workflow
- Update pyproject.toml documentation URL to point to docs site

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dev = [
 
 [project.urls]
 Homepage = "https://github.com/ashita-ai/tessera-python"
-Documentation = "https://github.com/ashita-ai/tessera-python#readme"
+Documentation = "https://ashita-ai.github.io/tessera-python"
 Repository = "https://github.com/ashita-ai/tessera-python"
 "Tessera Server" = "https://github.com/ashita-ai/tessera"
 
